RESOLVED FIXED279322
Fix some coding style issues in GraphicsContextSwitcher
https://bugs.webkit.org/show_bug.cgi?id=279322
Summary Fix some coding style issues in GraphicsContextSwitcher
Simon Fraser (smfr)
Reported 2024-09-08 10:27:41 PDT
Mostly "const FloatRect &" -> "const FloatRect&"
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-08 10:28:01 PDT
Simon Fraser (smfr)
Comment 2 2024-09-08 10:30:06 PDT
EWS
Comment 3 2024-09-09 10:17:52 PDT
Committed 283349@main (f307d7444170): <https://commits.webkit.org/283349@main> Reviewed commits have been landed. Closing PR #33294 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.