Fix some coding style issues in GraphicsContextSwitcher https://bugs.webkit.org/show_bug.cgi?id=279322 rdar://135509436

Reviewed by Alan Baradlay.

Fix coding style issues in GraphicsContextSwitcher and subclasses.

* Source/WebCore/platform/graphics/GraphicsContextSwitcher.cpp:
(WebCore::GraphicsContextSwitcher::create):
* Source/WebCore/platform/graphics/GraphicsContextSwitcher.h:
* Source/WebCore/platform/graphics/ImageBufferContextSwitcher.cpp:
(WebCore::ImageBufferContextSwitcher::ImageBufferContextSwitcher):
* Source/WebCore/platform/graphics/ImageBufferContextSwitcher.h:
* Source/WebCore/platform/graphics/TransparencyLayerContextSwitcher.h:

Canonical link: https://commits.webkit.org/283349@main