Source/WebCore/platform/graphics/GraphicsContextSwitcher.h
@@ -37,9 +37,8 @@ class GraphicsContext;
 
 class GraphicsContextSwitcher {
     WTF_MAKE_TZONE_ALLOCATED(GraphicsContextSwitcher);
-
 public:
-    static std::unique_ptr<GraphicsContextSwitcher> create(GraphicsContext& destinationContext, const FloatRect &sourceImageRect, const DestinationColorSpace&, RefPtr<Filter>&& = nullptr, FilterResults* = nullptr);
+    static std::unique_ptr<GraphicsContextSwitcher> create(GraphicsContext& destinationContext, const FloatRect& sourceImageRect, const DestinationColorSpace&, RefPtr<Filter>&& = nullptr, FilterResults* = nullptr);
 
     virtual ~GraphicsContextSwitcher() = default;
 
@@ -54,7 +53,7 @@ public:
     virtual void endDrawSourceImage(GraphicsContext& destinationContext, const DestinationColorSpace&) = 0;
 
 protected:
-    GraphicsContextSwitcher(RefPtr<Filter>&&);
+    explicit GraphicsContextSwitcher(RefPtr<Filter>&&);
 
     RefPtr<Filter> m_filter;
 };
